# AssetFolio

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  createAppImage.sh  index.html  mkdocs.yml  sitemap.xml
data/: FMPSymbolList.json  example.json  example_isin.json
docs/: index.md  lesson_learned.md  user_guide.md
docs/imgs/: AssetFolio.xcf
docs/releases/: release_notes.md
include/wx/: axisplot.h
include/wx/axis/: axis.h  dateaxis.h  logarithmicnumberaxis.h
include/wx/xy/: xysimpledataset.h
lesson_learned/: index.html
releases/release_notes/: index.html
resource/: AssetFolio.desktop  resources.qrc
search/: search_index.json
src/: AppControl.cpp  AppControl.h  AppGui.cpp  AppGui.h  Asset.cpp  Asset.h  AssetTrackerFormBuilder.fbp  ChartGui.cpp  ChartGui.h  Config.cpp  Config.h  MainFrame.cpp  MainFrame.h  MsgQueue.h  Stock.cpp  Stock.h  main.cpp  main.h
src/qt/: appgui.cpp  appgui.h  appgui.ui  callout.cpp  callout.h  customgraphicview.cpp  customgraphicview.h  customtableview.cpp  customtableview.h  main.cpp  mainwindow.ui
src/wx/: AppGui.cpp  AppGui.h  ChartGui.cpp  ChartGui.h  MainFrame.cpp  MainFrame.h  main.cpp
src/wxFreeChart/: democollection.cpp  xydemos.cpp
user_guide/: index.html
